fixed spacing added arrows with words

--- a/css/block-01.css
+++ b/css/block-01.css
@@ -30,6 +30,6 @@
     font-size: 22px;
 }
 
-.arrow-word-container {
+.block-01-arrow-word-container {
     transform: translate(180px, 100px);
 }
