--- a/css/block-05-application.css
+++ b/css/block-05-application.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap');
-
 #containerd {
     width: 300px;
     height: 60px;
@@ -16,8 +14,11 @@
 }
 
 .block-05-header-container {
-    /*height: 150px;*/
     /*background: #9fcdff;*/
+}
+
+.block-05-header-spacer {
+    height: 50px;
 }
 
 .block-05-body-container {
@@ -26,26 +27,28 @@
 }
 
 .block-05-body-left {
-    /*height: 150px;*/
 }
 
-.block-05-body-right {}
+.block-05-body-right {
+    padding-right: 0;
+}
 .block-05-body-right textarea {
     height: 133px;
     /*background: violet;*/
 }
 
 .buttons-container-block-05 {
-    margin: 0;
+    margin: 45px 0 0 0;
     /*background: #80bdff;*/
 }
 
+.block-05-footer {
+    height: 177px;
+}
 
 .eyson-input {
     border: 0;
     height: 60px;
-    /*width: calc(100% - 32px);*/
-    /*margin: 0 32px 13px 0;*/
     width: 100%;
     margin: 0 0 13px 0;
     background: rgba(255, 255, 255, 0.1);
@@ -59,10 +62,11 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 21px;
-    letter-spacing: 0em;
+    letter-spacing: 0;
     text-align: left;
     vertical-align: text-top;
     color: rgba(255, 255, 255, 0.5);
+    padding: 8px 0 0 20px;
 
 }
 
