--- a/css/eyson-footer.css
+++ b/css/eyson-footer.css
@@ -6,11 +6,22 @@
     background: black;
 }
 
+.eyson-footer-back {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 154px;
+    background: black;
+    z-index: -1;
+    position: absolute;
+    bottom: 0;
+}
+
 .phone-number {
     font-size: 14px;
     font-weight: 100;
     line-height: 17px;
-    letter-spacing: 0em;
+    letter-spacing: 0;
     text-align: left;
     color: white;
     margin: 0 10px 0 10px;
